--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,23 +1,31 @@
 // colors simantic variables
+/* examples:
 $gray-dark:           #333;
 $gray-med:            lighten( $gray-dark, 20% );
 $gray-light:          lighten( $gray-dark, 40% );
 $bright-blue:         #2A5DB0; // google blue
 $dark-blue:           darken( $dark-blue, 20% );
+*/
 
 // colors functional variables
+/* examples
 $font-main:           $gray-dark;
 $font-secondary:      $gray-med;
 $font-tertiary:       $gray-light;
 $font-links:          $bright-blue;
 $font-label:          $gray-med;
-
+*/
 
 // typeface treatmetns
+/* examples
 $type-body:          'Quattrocento', serif;
 $type-headline:      'Oswald', sans-serif;
+*/
 
 // media query variables
+// For a often updated list of common media querie, please refer to Chris Coyier's great website
+// https://css-tricks.com/snippets/css/media-queries-for-standard-devices/
+/* examples
 $mobile-min: 320px;
 $mobile-max: 736px;
 $mobile: $mobile-max;
@@ -28,6 +36,14 @@ $tablet: tablet-max;
 
 $desktop-min: $tablet + 1;
 $desktop: $desktop-min;
+*/
 
 // radius
+/* example
 $radius: 5px;
+*/
+
+// retina, png, svg background image fallback
+$image-path: '../img' !default;
+$fallback-extension: 'png' !default;
+$retina-suffix: '@2x';
