--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,49 +1,55 @@
+/*
 // colors simantic variables
-/* examples:
-$gray-dark:           #333;
-$gray-med:            lighten( $gray-dark, 20% );
-$gray-light:          lighten( $gray-dark, 40% );
-$bright-blue:         #2A5DB0; // google blue
-$dark-blue:           darken( $dark-blue, 20% );
-*/
+$gray-base:			#333;
+$gray-light:		lighten( $gray-base, 40% );
+$gray-med:			lighten( $gray-base, 20% );
+$blue-base:			#0099CC; // google blue
+$blue-light:		lighten( $blue-base, 20% );
+$blue-dark:			darken( $blue-base, 20% );
+$white:				#FFF;
 
 // colors functional variables
-/* examples
-$font-main:           $gray-dark;
-$font-secondary:      $gray-med;
-$font-tertiary:       $gray-light;
-$font-links:          $bright-blue;
-$font-label:          $gray-med;
-*/
+$font-main:			$gray-base;
+$font-secondary:	$gray-med;
+$font-tertiary:		$gray-light;
+$font-links:		$blue-base;
+$font-links-light:	$blue-light;
+$font-label:		$gray-med;
+$font-info-item:	$white;
+$fade:				$gray-base;
 
 // typeface treatmetns
-/* examples
-$type-body:          'Quattrocento', serif;
-$type-headline:      'Oswald', sans-serif;
-*/
+$type-body:			'Muli', sans-serif;
+$type-headline:		'Oswald', sans-serif;
+
+// font sizes
+$font-base: 		1em;
+$font-small:		$font-base/1.25;
+$font-size-body: 	$font-base;
+$font-size-menu: 	$font-base*2;
+$font-size-h1: 		$font-base*3;
+$font-size-h2: 		$font-base*2;
+$font-size-h3: 		$font-base*1.5;
+$font-size-h4: 		$font-base*1.25;
+
 
 // media query variables
-// For a often updated list of common media querie, please refer to Chris Coyier's great website
-// https://css-tricks.com/snippets/css/media-queries-for-standard-devices/
-/* examples
-$mobile-min: 320px;
-$mobile-max: 736px;
-$mobile: $mobile-max;
+$mobile-min: 		320px;
+$mobile-max: 		736px;
+$mobile: 			$mobile-max;
 
-$tablet-min: $mobile-max + 1;
-$tablet-max: 1024px;
-$tablet: tablet-max;
+$tablet-min: 		$mobile-max + 1;
+$tablet-max: 		1024px;
+$tablet: 			tablet-max;
 
-$desktop-min: $tablet + 1;
-$desktop: $desktop-min;
-*/
+$desktop-min: 		$tablet + 1;
+$desktop: 			$desktop-min;
 
 // radius
-/* example
-$radius: 5px;
-*/
+$radius: 			5px;
 
-// retina, png, svg background image fallback
+ */
+
 $image-path: '../img' !default;
 $fallback-extension: 'png' !default;
 $retina-suffix: '@2x';
